--- a/sections/MessageSec/style.scss
+++ b/sections/MessageSec/style.scss
@@ -1,5 +1,5 @@
 .BackGroundImage {
-  background-image: url(~/assets/message/img/stadium.jpg);
+  background-image: url(~/assets/message/img/stadium.JPG);
   background-size: cover;
   background-position: bottom;
   min-height: calc(100vh - 64px);
